src/lib_time_measurement/ppx/test/valid/test_lwt_addition_input.ml
let _ = Lwt.return (1 + 3) [@time.duration_lwt addition]
