src/lib_time_measurement/ppx/test/invalid/test_more_than_once_input.ml
let _ = (1 + 3) [@time.duration cat] [@time.duration dog]
